<resources>
    <string name="app_name">AndroidHackaton</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="Autorize">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="email">Email</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="middle_name">Отчество</string>
    <string name="phone">Телефон</string>


    <string name="birth_place_label">Место рождения</string>
    <string name="birthday_label">День рождения</string>
    <string name="citizenship_label">Гражданство</string>
    <string name="experience_label">Стаж вождения</string>
    <string name="gender_male_label">Мужчина</string>
    <string name="gender_female_label">Женщина</string>
    <string name="inn_label">ИНН</string>
    <string name="licence_number_label">Номер лицензии</string>
    <string name="licence_serial_label">Серия лицензии</string>
    <string name="pass_getting_date_label">Дата получения паспорта</string>
    <string name="pass_serial_label">Серия паспорта</string>
    <string name="pass_number_label">Номер паспорта</string>
    <string name="who_gave_pass_label">Кем выдан</string>
    <string name="registration_address_label">Адрес регистрации</string>
    <string name="snils">СНИЛС</string>

    <string name="home">Главная</string>
    <string name="cars">Машины</string>
    <string name="personal">Личное</string>
    <string name="map">Карта</string>
    <string name="reg_number">Рег. Номер:</string>
    <string name="year_of_release">Год выпуска:</string>
    <string name="l_s">л.с.:</string>
    <string name="insuranse_policy_number">Номер страхового полиса:</string>
    <string name="insuranse_policy_serial">Серия страхового полиса:</string>
    <string name="pts_number">Номер ПТС:</string>
    <string name="pts_serial">Серия ПТС:</string>
    <string name="vin_number">VIN номер:</string>
    <string name="pts_from_who">ПТС кем выдан:</string>

    <string name="signin_error">Ошибка авторизации. Попробуйте снова!</string>
    <string name="birth_date">Дата рождения</string>
    <string name="birth_place">Место рождения</string>
    <string name="citizinship">Гражданство</string>
    <string name="drive_expirience">Опыт вождения</string>
    <string name="passport">Паспорт:</string>
    <string name="pass_number">Номер:</string>
    <string name="pass_serial">Серия</string>
    <string name="pass_date">Дата Выдачи</string>
    <string name="pass_who">Кем выдан</string>
    <string name="issue_road_accident">Оформить ДТП</string>
    <string name="mark">Марка</string>
    <string name="model">Модель</string>
    <string name="horse_power">Л.С.</string>
    <string name="add_vehicle">Добавьте транспортное средство</string>
    <string name="send_form">Отправить форму</string>
    <string name="enter_second_user_data">Введите данные второго участника ДТП</string>
    <string name="reg_number_of_vehicle">Регистрационный номер ТС</string>
    <string name="enter_general_data">Введите общие данные</string>
    <string name="material_damage_to_different_things">Материальный ущерб, нанесенный другому имуществу</string>
    <string name="material_damage_to_transport_except_a_and_b">Материальный ущерб , нанесенный другим ТС</string>
    <string name="dtp_address">Адрес ДТП</string>
    <string name="enter_witness_and_victim_data">Введите данные о пострадавших и очевидцах</string>
    <string name="victim_count">Количество пострадавших</string>
    <string name="witness_name">Полное имя очевидца</string>
    <string name="witness_address">Адрес очевидца</string>
    <string name="enter_your_car_from_list">Выберете свою машину из списка</string>
    <string name="pull_over_note">Памятка водителю при остановке сотрудником ГИБДД</string>

    <string name="note_label">Памятка</string>

    <string name="note">Согласно с требованиями, изложенными в Приказе МВД №185, а также в Приказе №329, к основаниям, из-за которых инспекторы ДПС имеют право останавливать транспортное средство, относятся:

Визуально установленные, или определенные с помощью специальных технических средств, признаки нарушений требований безопасности дорожного движения на транспортном средстве;

Наличие объективных данных (служебной ориентировки, информация от третьих лиц, других постов ДПС или дежурных) о том, что лица, находящиеся в транспортном средстве, причастны к совершению преступления, ДТП или другого административного правонарушения; Данные о том, что автомобиль, который останавливают работники ГИБДД, находится в розыске или может использоваться для противоправных целей;
Необходимость опроса водителя и пассажиров автомобиля в качестве очевидцев преступления или ДТП, при котором они присутствовали; Привлечение пассажиров транспортного средства в качестве понятых;

 Необходимость использования автомобиля или водителя для оказания помощи работникам ДПС или участникам дорожного движения;

 Проверка водительских документов на право транспортировки определенных грузов, на право управления транспортным средством, самой документации на автомобиль, а также документов, которые удостоверяют личности пассажиров, находящихся в транспортном средстве. Отметим, что общение с ГАИ по поводу проверки документов может проводиться исключительно на полицейских контрольных пунктах, КПП или стационарных постах ГИБДД;

 Проведение специальных мероприятий, санкционированными распорядительными актами высших руководителей МВД и ГИБДД, направленных на проверку и установление личностей водителей транспортных средств и грузов, которые транспортируются.</string>
    <string name="title_activity_maps">Map</string>
</resources>
