<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/tab_item_padding"
    tools:context="com.example.ruslanio.androidhackaton.PersonalActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_birth_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_place_label"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="Дата рождения" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_citizenship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/citizenship_label"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/experience_label"
                    android:inputType="number"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male_label"/>
                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female_label"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_inn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inn_label"
                    android:inputType="number"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_licence_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/licence_number_label"
                    android:inputType="number"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_licence_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/licence_serial_label"
                    android:inputType="number"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/et_pass_getting_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="@string/pass_getting_date_label" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_pass_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass_serial_label"
                    android:inputType="number"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_pass_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass_number_label"
                    android:inputType="number"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_who_gave_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/who_gave_pass_label"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_registration_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_address_label"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_snils"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/snils"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/btn_save"
                style="@style/Button.Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сохранить"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
