<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.ruslanio.androidhackaton.AutoActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Label.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_vehicle"
                android:textSize="@dimen/large_text_size"/>

            <include layout="@layout/strip"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/tab_item_padding">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mark"
                        android:inputType="text"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/model"
                        android:imeActionId="@+id/et_mark"
                        android:inputType="text"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_reg_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reg_number"
                        android:imeActionId="@+id/et_model"
                        android:inputType="text"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_horse_power"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/horse_power"
                        android:imeActionId="@+id/et_reg_number"
                        android:inputType="number"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_insurance_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/insuranse_policy_number"
                        android:imeActionId="@+id/et_horse_power"
                        android:inputType="number"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_insurance_serial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/insuranse_policy_serial"
                        android:imeActionId="@+id/et_insurance_number"
                        android:inputType="number"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_vin_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vin_number"
                        android:imeActionId="@+id/et_insurance_serial"
                        android:inputType="number"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_pts_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pts_number"
                        android:imeActionId="@+id/et_vin_number"
                        android:inputType="text|number"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_pts_serial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pts_serial"
                        android:imeActionId="@+id/et_pts_number"
                        android:inputType="number"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_pts_who"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pts_from_who"
                        android:imeActionId="@+id/et_pts_serial"
                        android:inputType="text"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/year_of_release"
                        android:imeActionId="@+id/et_pts_who"
                        android:inputType="text"
                        android:lines="1"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include layout="@layout/strip"/>

            <Button
                android:id="@+id/save_car"
                style="@style/Button.Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сохранить"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
